tests/parser/bad/exps/type_t-map-cid-lparen-cid-lparen-cid-underscore.scilexp
let a : Map Uint128 (Option (Option Bool)) = Emp Uint128 (Option (Option Bool)) in True
